# learning-session-transcriber

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  audio_metadata.example.yaml  env.example  prompts.yaml  pyproject.toml  requirements.txt  session.example.csv  session.example.yaml
.agents/skills/session-pipeline-maintenance/: SKILL.md
scripts/: openai_audio_transcription_demo.py  openai_chat_demo.py  openai_list_models.py
src/learning_session_transcriber/: __init__.py  __main__.py  audio_joiner.py  config.py  downloader.py  extract_pdf.py  manifest.py  prompts.py  run_session.py  sessions.py  synthesizer.py  transcriber.py
tests/: __init__.py  test_config.py  test_downloader.py  test_manifest_consumers.py  test_prompts.py  test_sessions.py  test_transcriber.py
